--- a/src/index.less
+++ b/src/index.less
@@ -13,7 +13,7 @@ code {
     monospace;
 }
 
-.container{
+.container {
   max-width: 1420px;
   width: 100%;
   padding: 40px;
@@ -21,23 +21,23 @@ code {
   background-color: aquamarine;
 }
 
-.list{
+.list {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   list-style: none;
   text-align: center;
 }
 
-.item{
+.item {
   text-align: auto;
 }
 
-.info{
+.info {
   display: flex;
   flex-direction: column;
 }
 
-.card{
+.card {
   border: 1px solid salmon;
   border-radius: 20px;
   padding: 20px;
@@ -45,22 +45,33 @@ code {
   background-color: darkblue;
 }
 
-img{
+img {
   border: 1px solid wheat;
   border-radius: 20px;
 }
-a{
+
+p {
+  font-size: 20px;
+  color: darkorange;
+  text-decoration: none;
+}
+
+a {
   font-size: 20px;
   padding: 10px;
   color: darkorange;
   text-decoration: none;
 }
 
-a:hover{
+p:hover {
   color: rgb(186, 226, 43);
 }
 
-.input{
+a:hover {
+  color: rgb(186, 226, 43);
+}
+
+.input {
   font-size: 40px;
   width: 100%;
   background-color: rgb(250, 236, 114);
@@ -68,74 +79,79 @@ a:hover{
   border-radius: 20px;
 }
 
-.header{
+.header {
   color: indigo;
   font-size: 60px;
   text-align: center;
 }
 
-.title{
+.title {
   font-size: 40px;
 }
 
-.singlecard{
+.singlecard {
   text-align: center;
 }
 
-.gutter-row{
+.gutter-row {
   text-align: center;
 }
 
-.wrap{
+.wrap {
   max-width: 1920px;
   width: 100%;
   background-color: rgb(28, 143, 209);
 }
 
-.pagination{
+.pagination {
   display: flex;
-  list-style: none; 
+  list-style: none;
 }
 
-.pagenumber{
+.pagenumber {
   border: 1px solid firebrick;
   border-radius: 10px;
   margin: 10px;
   background-color: rgb(187, 17, 187);
-  a{
+
+  a {
     color: yellow;
   }
-  a:hover{
+
+  a:hover {
     color: brown;
   }
 }
 
-.Prev,.Next{
+.Prev,
+.Next {
   color: blue;
   background-color: aqua;
   padding: 15px;
   border-radius: 20px;
   margin: 10px;
 }
-.Prev:hover,.Next:hover{
+
+.Prev:hover,
+.Next:hover {
   background-color: darkgoldenrod;
 }
 
-.link{
+.link {
   font-size: 40px;
   color: white;
   border: 2px solid white;
   padding: 5px 40px;
   border-radius: 20px;
-  background-color:rgb(28, 143, 209);
+  background-color: rgb(28, 143, 209);
 }
 
-.indent{
+.indent {
   font-size: 20px;
   color: rgb(126, 56, 158);
 }
 
-.home{
+.home {
   font-size: 20px;
   background-color: darkorchid;
   margin-bottom: 20px;
@@ -143,13 +159,12 @@ a:hover{
   border-radius: 20px;
   padding: 15px 30px;
 
-  &:hover{
+  &:hover {
     color: aqua;
   }
 }
 
-.image{
+.image {
   height: 297px;
   width: 210px;
 }
-
